<resources>
    <string name="app_name">收音机</string>
    <string name="str_none" />
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败，点击重试</string>
    <string name="load_failed_no_network">网络失联了…\n请联网后点击重试</string>
    <string name="empty">这里啥都没有!</string>
    <string name="string_radio_local">本地台</string>
    <string name="string_radio_country">国家台</string>
    <string name="string_radio_province">省市台</string>
    <string name="string_radio_internet">网络台</string>
    <string name="string_text_history">播放历史</string>
    <string name="string_more">更多>></string>
    <string name="string_text_city">郑州市</string>
    <string name="string_text_rank">排行榜</string>
    <string name="string_my_collection">我的收藏</string>
    <string name="string_my_history">播放历史</string>
    <string name="string_my_record_video">我的录音</string>
    <string name="string_like_app">赏个好评</string>
    <string name="string_download">精品推荐</string>
    <string name="string_feed_back">意见反馈</string>
    <string name="string_setting">设置</string>
    <string name="string_voice_comesfrom">内容由喜马拉雅提供</string>
    <string name="string_back_to_see">回看</string>
    <string name="string_timing">定时</string>
    <string name="no_more_data">没有更多数据了</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_already_collect">已收藏</string>
    <string name="string_delete">删除</string>
    <string name="unselected">unselected</string>
    <string name="selected">selected</string>
    <string name="string_collect_error">收藏失败，请重试</string>
    <string name="string_search_hint">中国之声</string>
    <string name="string_live_title">正在直播:</string>
    <string name="string_lookback">历史节目</string>
    <string name="string_listen_back">回听</string>
    <string name="string_unknow_announcer">未知主持人</string>
    <string name="string_not_begin">未开始</string>
    <string name="string_playing">直播</string>
    <string name="string_live">直播中</string>
    <string name="program_not_start_yet">节目还未开始</string>
</resources>
