<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
    >
        <include layout="@layout/layout_home_rv_head"/>

        <RelativeLayout
                android:id="@+id/rl_play_history"
                android:paddingTop="@dimen/app_margin_left"
                android:paddingBottom="@dimen/app_margin_left"
                android:layout_marginTop="@dimen/app_margin_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
        >
            <com.wl.radio.view.ThemeImageView
                    android:layout_marginLeft="@dimen/app_margin_left"
                    android:id="@+id/iv_history_left"
                    android:layout_alignParentLeft="true"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/icon_title_flag"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
            />


            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_text_history"
                      android:layout_marginLeft="@dimen/app_margin_left"
                      android:layout_centerVertical="true"
                      android:layout_toRightOf="@id/iv_history_left"
                      android:textColor="@color/design_text_black"
                      android:textSize="@dimen/small_text_size"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_more"
                      android:layout_marginRight="@dimen/app_margin_left"
                      android:layout_centerVertical="true"
                      android:layout_alignParentRight="true"
                      android:textColor="@color/design_text_gray"
                      android:textSize="@dimen/small_text_size"
            />

        </RelativeLayout>
        <View
                android:id="@+id/view_line_play_history"
                android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/gray_white"
        />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvPlayHistory"
                android:nestedScrollingEnabled="false"
        ></androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
        <RelativeLayout

                android:id="@+id/rlCityMore"
                android:paddingTop="@dimen/app_margin_left"
                android:paddingBottom="@dimen/app_margin_left"
                android:layout_marginTop="@dimen/app_margin_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white_gray"
        >
            <com.wl.radio.view.ThemeImageView
                    android:layout_marginLeft="@dimen/app_margin_left"
                    android:id="@+id/iv_city_left"
                    android:layout_alignParentLeft="true"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/icon_title_flag"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
            />


            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_text_city"
                      android:layout_marginLeft="@dimen/app_margin_left"
                      android:layout_centerVertical="true"
                      android:layout_toRightOf="@id/iv_city_left"
                      android:textColor="@color/design_text_black"
                      android:textSize="@dimen/small_text_size"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_more"
                      android:layout_marginRight="@dimen/app_margin_left"
                      android:layout_centerVertical="true"
                      android:layout_alignParentRight="true"
                      android:textSize="@dimen/small_text_size"

                      android:textColor="@color/design_text_gray"
            />

        </RelativeLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/gray_white"
        />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvCity"
                android:nestedScrollingEnabled="false"
        ></androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>

        <RelativeLayout
                android:paddingTop="@dimen/app_margin_left"
                android:paddingBottom="@dimen/app_margin_left"
                android:layout_marginTop="@dimen/app_margin_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
        >
            <com.wl.radio.view.ThemeImageView
                    android:layout_marginLeft="@dimen/app_margin_left"
                    android:id="@+id/iv_rank_left"
                    android:layout_alignParentLeft="true"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/icon_title_flag"
                    android:scaleType="fitCenter"
                    android:layout_centerVertical="true"
            />


            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_text_rank"
                      android:layout_marginLeft="@dimen/app_margin_left"
                      android:layout_centerVertical="true"
                      android:layout_toRightOf="@id/iv_rank_left"
                      android:textColor="@color/design_text_black"
                      android:textSize="@dimen/small_text_size"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/string_more"
                      android:layout_marginRight="@dimen/app_margin_right"
                      android:layout_centerVertical="true"
                      android:layout_alignParentRight="true"
                      android:textColor="@color/design_text_gray"
                      android:visibility="invisible"
                      android:textSize="@dimen/small_text_size"
            />

        </RelativeLayout>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/gray_white"
        />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvRank"
                android:nestedScrollingEnabled="false"
        ></androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>
    </LinearLayout>


</ScrollView>